# Project_Clearpath

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  compile_commands.json  do-tests.bash  package.xml
.github/workflows/: run-test-and-upload-codecov.yml
app/: CMakeLists.txt  main.cpp
cmake-modules/: CodeCoverage.cmake
html/: annotated.html  annotated_dup.js  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-matchers_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-actions_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-matchers_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-nice-strict_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-spec-builders_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-generated-actions_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-matchers_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-port_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2gmock-internal-utils_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2gmock-port_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2gmock-pp_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-assertion-result_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-death-test_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-matchers_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-message_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-param-test_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-printers_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-spi_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-test-part_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest-typed-test_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest__pred__impl_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2gtest__prod_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2gtest-port_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2gtest-printers_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2custom_2gtest_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-death-test-internal_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-filepath_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-internal_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-param-util_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-port-arch_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-port_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-string_8h_source.html  build_2project__clearpath_2__deps_2googletest-src_2googletest_2include_2gtest_2internal_2gtest-type-util_8h_source.html  (+2675 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+26 more)
include/: debris_detection.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: collector_robot.launch.py  empty_world.launch.py  gazebo_launch.py  robot_state_publisher.launch.py  spawn_tbot3_custom.py  spawn_trash.launch.py  spawn_turtlebot3.launch.py  waffle_spawn.launch.py
libs/: CMakeLists.txt
libs/debris/: CMakeLists.txt  debris_detection.cpp  debris_detection.hpp  debris_remover.cpp  debris_remover.hpp
log/: latest_build
models/beer/: model.sdf
models/coke_can/: model.sdf
models/cricket_ball/: model.config  model.sdf
models/cross_joint_part/: model.config  model.sdf
result/: lint_output.txt
src/: debris_detection.cpp  main.cpp
test/: CMakeLists.txt  test.cpp  test_level1.cpp  test_level2.cpp
worlds/: disaster_world.world  room2.world  sample.world
(+23 files in other folders)
