cmake_minimum_required(VERSION 3.8)
project(project_clearpath)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Package dependencies
set(PACKAGE_DEPENDENCIES
  ament_cmake
  std_msgs
  sensor_msgs
  geometry_msgs
  gazebo_msgs
  nav_msgs
  tf2_ros
  image_transport
  cv_bridge
  rclcpp
  rclpy
  tf2
  OpenCV
  rosidl_default_generators
  rosbag2_cpp
)

# Find dependencies
foreach(dependency IN ITEMS ${PACKAGE_DEPENDENCIES})
  find_package(${dependency} REQUIRED)
endforeach()



# Add executables
add_executable(collector_node src/main.cpp src/debris_detection.cpp)
ament_target_dependencies(collector_node ${PACKAGE_DEPENDENCIES})

# Include directories for collector_node
target_include_directories(collector_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)

# Install executables
install(TARGETS
  collector_node
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files

install(DIRECTORY
  launch
  models
  worlds
  urdf
  DESTINATION share/${PROJECT_NAME}/
)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()