<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project_clearpath</name>
  <version>0.0.1</version>
  <description>Package for launching TurtleBot3 in Gazebo using an empty world.</description>

  <maintainer email="sriram21@umd.edu">sriram</maintainer>
  <license>Apache-2.0</license>

  <!-- Build Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>turtlebot3_description</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>

  <!-- Execution Dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>

  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
